--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "yt-wrapper",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Wrapper for Youtube Data API v3",
-  "type": "commonjs",
+  "main": "index.cjs",
+  "module": "index.mjs",
+  "types": "index.d.ts",
   "exports": {
+    "import": "./index.mjs",
     "require": "./index.cjs",
-    "import": "./index.mjs"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "types": "./index.d.ts"
   },
   "author": "56pancakes",
   "license": "ISC"
